[package]
name = "reasonably"
version = "0.1.0"
authors = ["PicoJr <picojr_dev@gmx.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }
break_infinity = "0.4.0"

# Debug
dioxus-logger = "0.5.1"
async-std = "1.13.0"
